Afford easier embedding

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       gtag('config', '%ANALYTICS_ID%');
     </script>
   </head>
-  <body>
+  <body class="ld-slate">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
